draft-ietf-mpls-tp-loss-delay-profile-03

--- a/draft-ietf-mpls-tp-loss-delay-profile-03.html
+++ b/draft-ietf-mpls-tp-loss-delay-profile-03.html
@@ -352,13 +352,14 @@
 
   <link href="#rfc.toc" rel="Contents">
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction">
-<link href="#rfc.section.2" rel="Chapter" title="2 Packet Loss Measurement (LM) Profile">
-<link href="#rfc.section.3" rel="Chapter" title="3 Packet Delay Measurement (DM) Profile">
-<link href="#rfc.section.4" rel="Chapter" title="4 Security Considerations">
-<link href="#rfc.section.5" rel="Chapter" title="5 IANA Considerations">
-<link href="#rfc.references" rel="Chapter" title="6 References">
-<link href="#rfc.references.1" rel="Chapter" title="6.1 Normative References">
-<link href="#rfc.references.2" rel="Chapter" title="6.2 Informative References">
+<link href="#rfc.section.2" rel="Chapter" title="2 MPLS-TP Measurement Considerations">
+<link href="#rfc.section.3" rel="Chapter" title="3 Packet Loss Measurement (LM) Profile">
+<link href="#rfc.section.4" rel="Chapter" title="4 Packet Delay Measurement (DM) Profile">
+<link href="#rfc.section.5" rel="Chapter" title="5 Security Considerations">
+<link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations">
+<link href="#rfc.references" rel="Chapter" title="7 References">
+<link href="#rfc.references.1" rel="Chapter" title="7.1 Normative References">
+<link href="#rfc.references.2" rel="Chapter" title="7.2 Informative References">
 <link href="#rfc.authors" rel="Chapter">
 
 
@@ -393,8 +394,8 @@
 <td class="right">Cisco Systems</td>
 </tr>
 <tr>
-<td class="left">Expires: August 08, 2011</td>
-<td class="right">February 04, 2011</td>
+<td class="left">Expires: October 22, 2011</td>
+<td class="right">April 20, 2011</td>
 </tr>
 
     	
@@ -402,7 +403,7 @@
   </table>
 
   <p class="title">A Packet Loss and Delay Measurement Profile for MPLS-based Transport Networks <br />
-  <span class="filename">draft-ietf-mpls-tp-loss-delay-profile-02</span></p>
+  <span class="filename">draft-ietf-mpls-tp-loss-delay-profile-03</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>Procedures and protocol mechanisms to enable the efficient and accurate measurement of packet loss, delay, and throughput in MPLS networks are defined in RFC XXXX.</p>
@@ -416,7 +417,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 08, 2011.</p>
+<p>This Internet-Draft will expire on October 22, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -427,8 +428,18 @@
 <p id="rfc.section.1.p.3">The assumption of this profile is that the devices involved in a measurement operation are configured for measurement by a means external to the measurement protocols themselves, for example via a Network Management System (NMS) or separate configuration protocol.</p>
 <p id="rfc.section.1.p.4">This document is a product of a joint Internet Engineering Task Force (IETF) / International Telecommunication Union Telecommunication Standardization Sector (ITU-T) effort to include an MPLS Transport Profile within the IETF MPLS and Pseudowire Emulation Edge-to-Edge (PWE3) architectures to support the capabilities and functionalities of a packet transport network as defined by the ITU-T.</p>
 <h1 id="rfc.section.2">
-<a href="#rfc.section.2">2.</a> Packet Loss Measurement (LM) Profile</h1>
-<p id="rfc.section.2.p.1">When an LM session is externally configured, the values of several protocol parameters can be fixed in advance at the endpoints involved in the session, so that inspection or negotiation of these parameters is not required.  These parameters, and their default values as specified by this profile, are as follows:</p>
+<a href="#rfc.section.2">2.</a> MPLS-TP Measurement Considerations</h1>
+<p id="rfc.section.2.p.1">Several of the considerations discussed in <a href="#I-D.ietf-mpls-loss-delay">[I-D.ietf-mpls-loss-delay]</a> can be disregarded in the more restrictive context of MPLS-TP: </p>
+
+<ul>
+<li>Equal Cost Multipath considerations (Section 2.7.3 of <a href="#I-D.ietf-mpls-loss-delay">[I-D.ietf-mpls-loss-delay]</a>)</li>
+<li>Considerations for direct LM in the presence of Label Switched Paths constructed via the Label Distribution Protocol (LDP) or utilizing Penultimate Hop Popping (Section 2.7.6 of <a href="#I-D.ietf-mpls-loss-delay">[I-D.ietf-mpls-loss-delay]</a>)</li>
+</ul>
+
+<p> </p>
+<h1 id="rfc.section.3">
+<a href="#rfc.section.3">3.</a> Packet Loss Measurement (LM) Profile</h1>
+<p id="rfc.section.3.p.1">When an LM session is externally configured, the values of several protocol parameters can be fixed in advance at the endpoints involved in the session, so that negotiation of these parameters is not required.  These parameters, and their default values as specified by this profile, are as follows:</p>
 <div id="#rfc.table.1"></div>
 <table cellpadding="3" cellspacing="0" class="tt full left">
 <thead><tr>
@@ -454,12 +465,29 @@
 </tr>
 </tbody>
 </table>
-<p id="rfc.section.2.p.2">This profile is restricted to direct-mode LM and therefore uses the MPLS Direct Packet Loss Measurement (DLM) Channel Type in the Associated Channel Header (ACH).</p>
-<p id="rfc.section.2.p.3">A simple implementation may assume that external configuration will ensure that both ends of the communication are using the default values for these parameters.</p>
-<h1 id="rfc.section.3">
-<a href="#rfc.section.3">3.</a> Packet Delay Measurement (DM) Profile</h1>
-<p id="rfc.section.3.p.1">When a DM session is externally configured, the values of several protocol parameters can be fixed in advance at the endpoints involved in the session, so that inspection or negotiation of these parameters is not required.  These parameters, and their default values as specified by this profile, are as follows:</p>
+<p id="rfc.section.3.p.2">A simple implementation may assume that external configuration will ensure that both ends of the communication are using the default values for these parameters.  Implementations are, however, strongly advised to validate the values of these parameters in received messages so that configuration inconsistencies can be detected and reported.</p>
+<p id="rfc.section.3.p.3">LM message rates (and test message rates, when inferred LM is used) should be configurable by the network operator on a per-channel basis.  The following intervals should be supported:</p>
 <div id="#rfc.table.2"></div>
+<table cellpadding="3" cellspacing="0" class="tt full left">
+<thead><tr>
+<th class="left">Message Type</th>
+<th class="left">Supported Intervals</th>
+</tr></thead>
+<tbody>
+<tr>
+<td class="left">LM Message</td>
+<td class="left">100 milliseconds, 1 second, 10 seconds, 1 minute, 10 minutes</td>
+</tr>
+<tr>
+<td class="left">Test Message</td>
+<td class="left">10 milliseconds, 100 milliseconds, 1 second, 10 seconds, 1 minute</td>
+</tr>
+</tbody>
+</table>
+<h1 id="rfc.section.4">
+<a href="#rfc.section.4">4.</a> Packet Delay Measurement (DM) Profile</h1>
+<p id="rfc.section.4.p.1">When a DM session is externally configured, the values of several protocol parameters can be fixed in advance at the endpoints involved in the session, so that negotiation of these parameters is not required.  These parameters, and their default values as specified by this profile, are as follows:</p>
+<div id="#rfc.table.3"></div>
 <table cellpadding="3" cellspacing="0" class="tt full left">
 <thead><tr>
 <th class="left">Parameter</th>
@@ -484,18 +512,19 @@
 </tr>
 </tbody>
 </table>
-<p id="rfc.section.3.p.2">This profile uses the MPLS Delay Measurement (DM) Channel Type in the Associated Channel Header (ACH).</p>
-<p id="rfc.section.3.p.3">A simple implementation may assume that external configuration will ensure that both ends of the communication are using the default values for these parameters.</p>
-<h1 id="rfc.section.4">
-<a href="#rfc.section.4">4.</a> Security Considerations</h1>
-<p id="rfc.section.4.p.1">This document delineates a subset of the procedures specified in <a href="#I-D.ietf-mpls-loss-delay">[I-D.ietf-mpls-loss-delay]</a>, and as such introduces no new security considerations in itself.  The security considerations discussed in <a href="#I-D.ietf-mpls-loss-delay">[I-D.ietf-mpls-loss-delay]</a> apply also to the profile presented in this document.</p>
+<p id="rfc.section.4.p.2">This profile uses the MPLS Delay Measurement (DM) Channel Type in the Associated Channel Header (ACH).</p>
+<p id="rfc.section.4.p.3">A simple implementation may assume that external configuration will ensure that both ends of the communication are using the default values for these parameters.  Implementations are, however, strongly advised to validate the values of these parameters in received messages so that configuration inconsistencies can be detected and reported.</p>
+<p id="rfc.section.4.p.4">DM message rates should be configurable by the network operator on a per-channel basis.  The following message intervals should be supported: 1 second, 10 seconds, 1 minute, 10 minutes.</p>
 <h1 id="rfc.section.5">
-<a href="#rfc.section.5">5.</a> IANA Considerations</h1>
-<p id="rfc.section.5.p.1">This document introduces no new IANA considerations.</p>
+<a href="#rfc.section.5">5.</a> Security Considerations</h1>
+<p id="rfc.section.5.p.1">This document delineates a subset of the procedures specified in <a href="#I-D.ietf-mpls-loss-delay">[I-D.ietf-mpls-loss-delay]</a>, and as such introduces no new security considerations in itself.  The security considerations discussed in <a href="#I-D.ietf-mpls-loss-delay">[I-D.ietf-mpls-loss-delay]</a> apply also to the profile presented in this document.</p>
+<h1 id="rfc.section.6">
+<a href="#rfc.section.6">6.</a> IANA Considerations</h1>
+<p id="rfc.section.6.p.1">This document introduces no new IANA considerations.</p>
 <h1 id="rfc.references">
-<a href="#rfc.references">6.</a> References</h1>
+<a href="#rfc.references">7.</a> References</h1>
 <h1 id="rfc.references.1">
-<a href="#rfc.references.1">6.1.</a> Normative References</h1>
+<a href="#rfc.references.1">7.1.</a> Normative References</h1>
 <table><tbody>
 <tr>
 <td class="reference"><b id="RFC5586">[RFC5586]</b></td>
@@ -514,7 +543,7 @@
 </tr>
 </tbody></table>
 <h1 id="rfc.references.2">
-<a href="#rfc.references.2">6.2.</a> Informative References</h1>
+<a href="#rfc.references.2">7.2.</a> Informative References</h1>
 <table><tbody><tr>
 <td class="reference"><b id="RFC5921">[RFC5921]</b></td>
 <td class="top">
@@ -571,19 +600,21 @@
 
   	<li>1.   <a href="#rfc.section.1">Introduction</a>
 </li>
-<li>2.   <a href="#rfc.section.2">Packet Loss Measurement (LM) Profile</a>
+<li>2.   <a href="#rfc.section.2">MPLS-TP Measurement Considerations</a>
 </li>
-<li>3.   <a href="#rfc.section.3">Packet Delay Measurement (DM) Profile</a>
+<li>3.   <a href="#rfc.section.3">Packet Loss Measurement (LM) Profile</a>
 </li>
-<li>4.   <a href="#rfc.section.4">Security Considerations</a>
+<li>4.   <a href="#rfc.section.4">Packet Delay Measurement (DM) Profile</a>
 </li>
-<li>5.   <a href="#rfc.section.5">IANA Considerations</a>
+<li>5.   <a href="#rfc.section.5">Security Considerations</a>
 </li>
-<li>6.   <a href="#rfc.references">References</a>
+<li>6.   <a href="#rfc.section.6">IANA Considerations</a>
 </li>
-<li>6.1.   <a href="#rfc.references.1">Normative References</a>
+<li>7.   <a href="#rfc.references">References</a>
 </li>
-<li>6.2.   <a href="#rfc.references.2">Informative References</a>
+<li>7.1.   <a href="#rfc.references.1">Normative References</a>
+</li>
+<li>7.2.   <a href="#rfc.references.2">Informative References</a>
 </li>
 <li><a href="#rfc.authors">Authors' Addresses</a>
 </li>
