draft-ietf-sipping-service-identification-03

--- a/draft-ietf-sipping-service-identification-03.html
+++ b/draft-ietf-sipping-service-identification-03.html
@@ -155,11 +155,11 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">SIPPING</td><td class="header">J. Rosenberg</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco</td></tr>
-<tr><td class="header">Intended status: Informational</td><td class="header">July 15, 2008</td></tr>
-<tr><td class="header">Expires: January 16, 2009</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Informational</td><td class="header">August 04, 2008</td></tr>
+<tr><td class="header">Expires: February 5, 2009</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
 <h1><br />Identification of Communications Services in the Session Initiation
-	Protocol (SIP)<br />draft-ietf-sipping-service-identification-02</h1>
+	Protocol (SIP)<br />draft-ietf-sipping-service-identification-03</h1>
 
 <h3>Status of this Memo</h3>
 <p>
@@ -185,7 +185,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on January 16, 2009.</p>
+This Internet-Draft will expire on February 5, 2009.</p>
 
 <h3>Abstract</h3>
 
@@ -239,28 +239,38 @@ Key Principles of Service Identification<br />
 Services are a By-Product of Signaling<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor10">5.2.</a>&nbsp;
 Identical Signaling Produces Identical Services<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor11">5.3.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#sec-dwis">5.3.</a>&nbsp;
 Do What I Say, not What I Mean<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor12">5.4.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor11">5.4.</a>&nbsp;
 Explicit Service Identifiers are Redundant<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor13">5.5.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor12">5.5.</a>&nbsp;
 URIs are Key for Differentiated Signaling<br />
 <a href="#sec-problems">6.</a>&nbsp;
 Perils of Declarative Service
 				      Identification<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#sec-fraud">6.1.</a>&nbsp;
 Fraud<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor14">6.2.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor13">6.2.</a>&nbsp;
 Systematic Interoperability Failures<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor15">6.3.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor14">6.3.</a>&nbsp;
 Stifling of Service Innovation<br />
-<a href="#anchor16">7.</a>&nbsp;
+<a href="#anchor15">7.</a>&nbsp;
 Recommendations<br />
-<a href="#anchor17">8.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor16">7.1.</a>&nbsp;
+Use Derived Service Identification<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor17">7.2.</a>&nbsp;
+Design for Heterogeneity<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor18">7.3.</a>&nbsp;
+Presence<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor19">7.4.</a>&nbsp;
+Intra-Domain<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor20">7.5.</a>&nbsp;
+Device Dispatch<br />
+<a href="#anchor21">8.</a>&nbsp;
 Security Considerations<br />
-<a href="#anchor18">9.</a>&nbsp;
+<a href="#anchor22">9.</a>&nbsp;
 IANA Considerations<br />
-<a href="#anchor19">10.</a>&nbsp;
+<a href="#anchor23">10.</a>&nbsp;
 Acknowledgements<br />
 <a href="#rfc.references1">11.</a>&nbsp;
 Informational References<br />
@@ -974,7 +984,7 @@ messages.
 </dd>
 </dl></blockquote>
 
-<a name="anchor11"></a><br /><hr />
+<a name="sec-dwis"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.3"></a><h3>5.3.&nbsp;
 Do What I Say, not What I Mean</h3>
@@ -1011,7 +1021,7 @@ wrong thing? If it is the latter case, its DWIM. If its the former,
 its DWIS.
 
 </p>
-<a name="anchor12"></a><br /><hr />
+<a name="anchor11"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.4"></a><h3>5.4.&nbsp;
 Explicit Service Identifiers are Redundant</h3>
@@ -1025,7 +1035,7 @@ itself. It says nothing that could not or should not otherwise be derived from
 examination of the signaling.
 
 </p>
-<a name="anchor13"></a><br /><hr />
+<a name="anchor12"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.5"></a><h3>5.5.&nbsp;
 URIs are Key for Differentiated Signaling</h3>
@@ -1131,7 +1141,7 @@ separately indicate this is an emergency call, besides targeting it to
 an emergency URN.
 
 </p>
-<a name="anchor14"></a><br /><hr />
+<a name="anchor13"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6.2"></a><h3>6.2.&nbsp;
 Systematic Interoperability Failures</h3>
@@ -1211,7 +1221,7 @@ causes. It is for this same reason that declarative service
 identification needs to be avoided.
 
 </p>
-<a name="anchor15"></a><br /><hr />
+<a name="anchor14"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6.3"></a><h3>6.3.&nbsp;
 Stifling of Service Innovation</h3>
@@ -1280,37 +1290,72 @@ completely, or partially fail, when their users call users in other
 provider domains. 
 
 </p>
-<a name="anchor16"></a><br /><hr />
+<a name="anchor15"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.7"></a><h3>7.&nbsp;
 Recommendations</h3>
 
 <p>
-From these principles, several recommendations can be made:
+From these principles, several recommendations can be made.
 
 </p>
-<p></p>
-<ul class="text">
-<li>Systems needing to perform service identification must examine
-existing signaling constructs to identify the service based on fields
-that exist within the signaling message already.
+<a name="anchor16"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.7.1"></a><h3>7.1.&nbsp;
+Use Derived Service Identification</h3>
 
-</li>
-<li>If it appears that the signaling currently defined in standards is
+<p>Derived service identification - where an identifier for a service
+  is obtained by inspection of the signaling and other contextual data
+  (such as subscriber profile) is reasonable, and when done properly,
+  does not lead to the perils described above. However, declarative
+  service identification - where user agents indicate what the service
+  is, separate from the rest of the signaling - leads to the perils
+  described above. 
+  
+</p>
+<p>If it appears that the signaling currently defined in standards is
 not sufficient to identify the service, it may be due to lack of
-sufficient signaling to convey what is needed, or may because request
-URIs should be used for differentiation.
+sufficient signaling to convey what is needed, or may be because request
+URIs should be used for differentiation and they are not being
+  used. By applying the litmus tests described in
+  <a class='info' href='#sec-dwis'>Section&nbsp;5.3<span> (</span><span class='info'>Do What I Say, not What I Mean</span><span>)</span></a>, network designers can determine if the
+  system is attempting to perform declarative service identification
+  or not. 
 
-</li>
-<li>
+</p>
+<a name="anchor17"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.7.2"></a><h3>7.2.&nbsp;
+Design for Heterogeneity</h3>
+
+<p>
 When performing derived service identification, domains should be
 aware that sessions may arrive from different networks and different
 endpoints. Consequently, the service identification algorithm must be
 complete - meaning it computes the best answer for any possible
 signaling message that might be received.
 
-</li>
-<li>
+</p>
+<p>
+In a homogeneous environment, the process of service identification is
+easy. The service provider will know the set of services they are
+providing, and based on the specific calls flows for each specific
+service, can construct rules to differentiate one service from
+another. However, when two different providers interconnect,
+assumptions about what services are used, and how they are signaled,
+no longer apply. To provide the best user experience possible, a
+provider doing service identification needs to perform a 'best-match'
+operation, such that any legal SIP signaling - not just the specific
+call flows running within their own network - is mapped to the
+appropriate service. 
+
+</p>
+<a name="anchor18"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.7.3"></a><h3>7.3.&nbsp;
+Presence</h3>
+
+<p>
 Presence can help a great deal with providing unique URIs for
 different services. When a
 user wishes to contact another user, and knows only the AOR for the
@@ -1320,17 +1365,29 @@ service URI for contacting the target with different services. Those
 URI can then be used in the Request-URI for differentiation. When
 possible, this is the best solution to the problem. 
 
-</li>
-<li>
+</p>
+<a name="anchor19"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.7.4"></a><h3>7.4.&nbsp;
+Intra-Domain</h3>
+
+<p>
 Service identifiers themselves are not bad; derived service
 identification allows each domain to cache the results of the service
 identification process for usage by another
 network element within the same domain. However, service identifiers
 are fundamentally useful within a particular domain, and any such
-header must be stripped at a network boundary.
+header must be stripped at a network boundary. Consequently, the
+process of service identification and their associated service
+identifiers is always an intra-domain operation.
 
-</li>
-<li>
+</p>
+<a name="anchor20"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.7.5"></a><h3>7.5.&nbsp;
+Device Dispatch</h3>
+
+<p>
 Device dispatch should be done following the principles of
 <a class='info' href='#RFC3841'>[RFC3841]<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., and P. Kyzivat, &ldquo;Caller Preferences for the Session Initiation Protocol (SIP),&rdquo; August&nbsp;2004.</span><span>)</span></a>, using implicit preferences based on the
 signaling. For example,
@@ -1338,10 +1395,42 @@ signaling. For example,
 capability that can be used to dispatch requests based on different
 types of application media streams.
 
-</li>
-</ul>
+</p>
+<p>
+However, it is is a mistake to try and use a service identifier as a
+UA capability. Consider a service called "multimedia telephony" which
+adds video to the existing PSTN experience. A user has two devices,
+one of which is used for multimedia telephony, and the other is used
+strictly for a voice-assisted game. It is tempting to have the
+telephony device include a UA capability <a class='info' href='#RFC3840'>[RFC3840]<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., and P. Kyzivat, &ldquo;Indicating User Agent Capabilities in the Session Initiation Protocol (SIP),&rdquo; August&nbsp;2004.</span><span>)</span></a>
+called "multimedia telephony" in its registration. Then, a calling
+multimedia telephony device can then include the 
+Accept-Contact header field <a class='info' href='#RFC3841'>[RFC3841]<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., and P. Kyzivat, &ldquo;Caller Preferences for the Session Initiation Protocol (SIP),&rdquo; August&nbsp;2004.</span><span>)</span></a> containing this
+feature tag. The proxy serving the called party, applying the basic
+algorithms of <a class='info' href='#RFC3841'>[RFC3841]<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., and P. Kyzivat, &ldquo;Caller Preferences for the Session Initiation Protocol (SIP),&rdquo; August&nbsp;2004.</span><span>)</span></a> will correctly route the call
+to the terminating device.
 
-<a name="anchor17"></a><br /><hr />
+</p>
+<p>
+However, 
+if the calling party is not within the same domain, and the calling
+domain does not know about or use this feature tag, there will be no
+Accept-Contact header field, even if the calling party was using a
+service that is a good match for 'multimedia telephony'. In such a
+case, the call may be delivered to both devices, yielded a poorer user
+experience. Thats because device dispatch was done using declarative
+service identification.
+
+</p>
+<p>
+The best way to avoid this problem is to use feature tags which can be
+matched to well defined signaling features - media types, required SIP
+extensions and so on. In particular, the golden rule is that the
+granularity of feature tags must be equivalent to the granularity of
+individual features that can be signaled in SIP. 
+
+</p>
+<a name="anchor21"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.8"></a><h3>8.&nbsp;
 Security Considerations</h3>
@@ -1355,7 +1444,7 @@ is introduced. It is for this reason, discussed extensively in <a class='info' h
 inserted by a UA is not recommended.
 
 </p>
-<a name="anchor18"></a><br /><hr />
+<a name="anchor22"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.9"></a><h3>9.&nbsp;
 IANA Considerations</h3>
@@ -1364,7 +1453,7 @@ IANA Considerations</h3>
 There are no IANA considerations associated with this specification.
 
 </p>
-<a name="anchor19"></a><br /><hr />
+<a name="anchor23"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10"></a><h3>10.&nbsp;
 Acknowledgements</h3>
@@ -1403,6 +1492,8 @@ and Claudio Allochio for reviews of this document.
 <td class="author-text">Campbell, B., Rosenberg, J., Schulzrinne, H., Huitema, C., and D. Gurle, &ldquo;<a href="http://tools.ietf.org/html/rfc3428">Session Initiation Protocol (SIP) Extension for Instant Messaging</a>,&rdquo; RFC&nbsp;3428, December&nbsp;2002 (<a href="http://www.rfc-editor.org/rfc/rfc3428.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3841">[RFC3841]</a></td>
 <td class="author-text">Rosenberg, J., Schulzrinne, H., and P. Kyzivat, &ldquo;<a href="http://tools.ietf.org/html/rfc3841">Caller Preferences for the Session Initiation Protocol (SIP)</a>,&rdquo; RFC&nbsp;3841, August&nbsp;2004 (<a href="http://www.rfc-editor.org/rfc/rfc3841.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC3840">[RFC3840]</a></td>
+<td class="author-text">Rosenberg, J., Schulzrinne, H., and P. Kyzivat, &ldquo;<a href="http://tools.ietf.org/html/rfc3840">Indicating User Agent Capabilities in the Session Initiation Protocol (SIP)</a>,&rdquo; RFC&nbsp;3840, August&nbsp;2004 (<a href="http://www.rfc-editor.org/rfc/rfc3840.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.authors"></a><br /><hr />
